first git commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoadingActivity"></activity>
+        <activity android:name=".StudentHomePageActivity" />
+        <activity android:name=".LoadingActivity" />
+        <activity android:name=".LecturerHomePageView" />
     </application>
 
 </manifest>
